# typeenum

./: Cargo.toml  LICENSE  README.md
examples/: test.rs
src/: lib.rs
typeenum_derive/: Cargo.toml  README.md
typeenum_derive/src/: lib.rs
